/*
 * $Id: ChangeLog,v 1.2461 2004/03/03 04:50:40 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-03-03 13:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/direct.c
    ! strip file path before matching with skleton passed
    ! some casts

2004-03-03 11:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/regex.c
    ! minor correction on Wild2RegEx() for case.

2004-03-02 20:47 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/direct.c
    + Added logic to restore current dir in hb_fsDirectoryCrawler()
    - Remove redundant hb_itemClear()
    - Removed unneeded save/restore of current directory
      /* please advise if I'm wrong */

  * source/rtl/regex.c
    * Minor fix to iLenResult when bMatchCase is FALSE
    + Added PRG Wrapper Wild2RegEx()

  * tests/dirtest4.prg
    * Simplified, optimized, and formatted.

2004-03-03 00:25 UTC-0300 Marcelo Lombardo <marcelo@xharbour.com.br>
  * include/hbset.h
  * include/set.ch
    + Added HB_SET_BGTASKPCODES to set up # of pCodes executed before
      check for Task execution (Only applies to ST applications)
  * source/rtl/set.c
    + Added support to HB_SET_BGTASKPCODES
    + Added set_numberul() to handle LONG SET Parameters
  * source/pptable.c
    + Added support to HB_SET_BGTASKPCODES
    ! Fixed HB_SET_TRIMFILENAME enum constant
    ! Fixed hb_pp_topCommand if not defined HB_COMPAT_C53
  * source/vm/hvm.c
    + Added support to HB_SET_BGTASKPCODES
  + tests/bkgtst2.prg
    + Added sample to demonstrate HB_SET_BGTASKPCODES

2004-03-02 17:37 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/regex.c
    + added int Wild2RegEx( char *sWild, char* sRegEx, BOOL bMatchCase )

  * source/rtl/strmatch.c
    + Implemnted TODO: hb_strMatchRegExp()

  * include/hbapifs.h