@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2461 2004/03/03 04:50:40 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.2462 2004/03/03 06:35:17 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-03-03 14:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * source/rtl/direct.c
+    ! code formatting
+
 2004-03-03 13:40 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * source/rtl/direct.c
     ! strip file path before matching with skleton passed
